--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@
 
 # Godot-specific ignores
 .import/
-export.cfg
-export_presets.cfg
 
 # Imported translations (automatically generated from CSV files)
 *.translation
@@ -15,3 +13,5 @@ data_*/
 mono_crash.*.json
 
 .DS_store
+
+build/*
